--- a/.drone.yml
+++ b/.drone.yml
@@ -25,3 +25,4 @@ steps:
     settings:
       webhook_id: 667736502884761610
       webhook_token: WDGGDXRTJAZ1RTUsZrWNSUeVarc_AJnS8M62pC6m81-5ZSqjx_yVOy30VgobORQrGXXV
+      message: Le front ${DRONE_REPO_NAME} est déployé.
